--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,24 +1,20 @@
-<nav class="navbar banner">
-  <div data-spy="affix" data-offset-top="0">
-    <div class="container">
-      <div class="navbar-inner">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="{% if page.section == 'home' %}active{% endif %}"><a href="{{site.baseurl}}/">Accueil</a></li>
-            <li class="{% if page.section == 'glaciers' %}active{% endif %}"><a href="{{site.baseurl}}/pages/glaciers/">Les glaciers des Pyrénées</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="{% if page.section == 'home' %}active{% endif %}"><a href="{{site.baseurl}}/">Accueil</a></li>
+        <li class="{% if page.section == 'glaciers' %}active{% endif %}"><a href="{{site.baseurl}}/pages/glaciers/">Les glaciers des Pyrénées</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
   </div>
 </nav>
