--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,11 @@
   <body>
 
     {% include header.html %}
-    
+
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Moraine</h1>
-        <h2>Association pyrénéenne de glaciologie</h2>
+        <h2>{{ page.title }}</h2>
       </div>
       <div class="gradient"></div>
     </div>
