--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,9 +10,17 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Moraine</h1>
-        <h2>Association pyrénéenne de glaciologie</h2>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <div class="row">
+          <div class="col-md-8">
+            <h1>Moraine</h1>
+            <h2>
+            Association Moraine pour l'étude des glaciers des Pyrénées.
+            </h2>
+            <p>
+            Suivi de l'évolution, campagnes de mesure de surface et de profondeur conférences diaporamas sorties thématiques.
+            </p>
+          </div>
+        </div>
       </div>
       <div class="gradient"></div>
     </div>
