--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -57,3 +57,12 @@
     padding-top: 60px;
   }
 }
+
+.fa-2 {
+  font-size: 3em;
+  padding: 10px;
+  font-weight: 100;
+}
+.fa-color {
+  color: $brand-primary;
+}
