--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -71,7 +71,7 @@ section:nth-child(even) {
 
 .fa-2 {
   font-size: 3em;
-  padding: 10px;
+  padding: 30px 10px 10px 10px;
   font-weight: 100;
 }
 .fa-color {
