--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,3 +8,6 @@
 </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script>
+  $('body').scrollspy({ target: '#navigation-scroll' });
+</script>
