Espace en dessus du fil d'ariane

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,4 +1,4 @@
-<div id="breadcrumbs">
+<div id="breadcrumbs" class="mb-4">
 {% assign crumbs = page.url | remove:'/index.html' | split: '/' %}
 <a href="{{ site.baseurl }}/">Accueil</a>
 {% for crumb in crumbs offset: 1 %}
