--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,5 +6,6 @@
 <nav class="nav nav-masthead">
   <a class="nav-link {% if page.section == 'association' %}active{% endif %}" href="{{ site.baseurl }}/association">L'association</a>
   <a class="nav-link {% if page.section == 'glaciers' %}active{% endif %}" href="{{ site.baseurl }}/glaciers">Les glaciers des Pyrénées</a>
+  <a class="nav-link {% if page.section == 'livre' %}active{% endif %}" href="{{ site.baseurl }}/livre">Le livre</a>
   <a class="nav-link {% if page.section == 'bibliographie' %}active{% endif %}" href="{{ site.baseurl }}/bibliographie">Bibliographie</a>
 </nav>
